<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, Apptentive, Inc. All Rights Reserved.
  ~ Please refer to the LICENSE file for the terms and conditions
  ~ under which redistribution and use of this file is permitted.
  -->
<resources>
    <string name="apptentive_ok">OK</string>
    <string name="apptentive_yes">Yes</string>
    <string name="apptentive_no">No</string>
    <string name="apptentive_skip">Skip</string>
    <string name="apptentive_you">You</string>
    <string name="apptentive_developer">Developer</string>
    <string name="apptentive_oops">Oops!</string>
    <string name="apptentive_send">Send</string>
    <string name="apptentive_give_feedback">Give Feedback</string>
    <string name="apptentive_thanks">Thanks!</string>
    <string name="apptentive_no_thanks">No thanks</string>
    <string name="apptentive_thank_you">Thank You</string>
    <string name="apptentive_were_sorry">We\'re Sorry!</string>
    <string name="apptentive_required">Required</string>
    <string name="apptentive_optional">Optional</string>
    <string name="apptentive_sending">Sending…</string>
    <string name="apptentive_failed">Failed</string>
    <string name="apptentive_sent">Sent</string>
    <string name="apptentive_version">Apptentive Version %s</string>

    <string name="apptentive_edittext_hint_email">Your Email Address</string>
    <string name="apptentive_edittext_hint_email_required">Email Address (required)</string>

    <string name="apptentive_powered_by_apptentive">Powered by</string>
    <string name="apptentive_about_title">About Apptentive</string>
    <string name="apptentive_about_description">Apptentive is a feedback and communication service which allows the people who make this app to quickly get your feedback and better listen to you.</string>
    <string name="apptentive_about_description_link">Find out more at apptentive.com</string>
    <string name="apptentive_about_privacy">Your feedback is hosted by Apptentive and is subject to Apptentive\'s privacy policy and the privacy policy of the developer of this app.</string>
    <string name="apptentive_about_privacy_link">Visit Apptentive\'s Privacy Policy</string>

    <string name="apptentive_do_you_love_this_app">Do you love %s?</string>

    <string name="apptentive_rating_message_fs">We\'re so happy to hear that you love %s! It\'d be really helpful if you rated us. Thanks so much for spending some time with us.</string>
    <string name="apptentive_rate_this_app">Rate %s</string>
    <string name="apptentive_rating_remind">Remind Me Later</string>
    <string name="apptentive_rating_error">We\'re unable to find this app in the store. Please visit the store to find and rate it.</string>

    <string name="apptentive_intro_dialog_title_no_love">@string/apptentive_were_sorry</string>
    <string name="apptentive_intro_dialog_title_default">Thanks for your feedback!</string>
    <string name="apptentive_intro_dialog_body">Please let us know how to make %s better for you!</string>
    <string name="apptentive_intro_dialog_edittext_hint">Tell us how we can help. (required)</string>

    <string name="apptentive_thank_you_dialog_body">Your response has been saved in the Message Center, where you\'ll be able to view replies and send us other messages.</string>
    <string name="apptentive_thank_you_dialog_body_message_center_disabled">Thank you for your feedback!</string>
    <string name="apptentive_thank_you_dialog_body_message_center_disabled_email_required">We\'ll be in touch via email.</string>
    <string name="apptentive_thank_you_dialog_close">Close</string>
    <string name="apptentive_thank_you_dialog_view_messages">View Messages</string>

    <string name="apptentive_dialog_email_validation_failed_title">Invalid Email Address</string>
    <string name="apptentive_dialog_email_validation_failed_body">Please enter a valid email address.</string>

    <string name="apptentive_survey_header">Survey</string>
    <string name="apptentive_survey_singleline_hint">Enter an answer…</string>
    <string name="apptentive_survey_send_response">Send Response</string>

    <string name="apptentive_message_center_title">Message Center</string>
    <string name="apptentive_message_center_compose_title">Compose:</string>
    <string name="apptentive_message_center_compose_hint">Type a message…</string>
    <string name="apptentive_message_center_attachment_title">Send image?</string>

    <string name="apptentive_message_center_status_error_title">:-(</string>
    <string name="apptentive_message_center_status_error_body">Something is wrong.\n We can\'t receive your message right now.</string>
    <string name="apptentive_message_center_who_card_name_hint">Name</string>
    <string name="apptentive_message_center_who_card_email_hint">Email</string>
    <string name="apptentive_message_center_who_card_title">And who are we speaking with?</string>
    <string name="apptentive_message_center_who_card_skip">SKIP</string>
    <string name="apptentive_message_center_who_card_me">THAT\'S ME!</string>

    <string name="apptentive_message_less">Less&lt;&lt;</string>
    <string name="apptentive_message_more">More&gt;&gt;</string>

    <string name="apptentive_message_center_no_connection">Please connect to the internet to send feedback.</string>
    <string name="apptentive_message_center_server_error">It looks like we\'re having trouble accessing feedback. Please wait a bit and try again.</string>

    <!-- This is a Java format. -->
    <string name="apptentive_message_sent_timestamp_format">MMM dd, yyyy h:mma</string>

    <string name="apptentive_message_auto_body_manual">This is our Message Center. If you have questions, suggestions, concerns, or just want to get in touch, please send us a message. We love talking with our customers!</string>
    <string name="apptentive_message_auto_body_no_love">What can we do to ensure that you love our app? We appreciate your constructive feedback.</string>

    <string name="apptentive_rating_provider_no_google_play">Google Play was not found. Please install Google Play before rating this app.</string>
    <string name="apptentive_rating_provider_no_amazon_appstore">Amazon Appstore was not found. Please install Amazon Appstore before rating this app.</string>
    <string name="apptentive_rating_provider_no_mikandi">MiKandi Market was not found. Please install MiKandi Market before rating this app.</string>
</resources>
