<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, Apptentive, Inc. All Rights Reserved.
  ~ Please refer to the LICENSE file for the terms and conditions
  ~ under which redistribution and use of this file is permitted.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:paddingBottom="1.5dp"
             android:background="@android:color/transparent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="10dp"
                  android:layout_marginLeft="10dp"
                  android:elevation="1.5dp"
                  android:orientation="vertical"
                  android:background="@drawable/apptentive_rounded_corner_shape">
            <TextView android:id="@+id/who_title"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:gravity="left"
                      android:textColor="@color/apptentive_text_message_text"
                      android:textSize="16sp"
                      android:textStyle="normal"
                      android:text="@string/apptentive_message_center_who_card_title"/>
            <EditText android:id="@+id/who_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="20dp"
                      android:inputType="textCapSentences"
                      android:singleLine="true"
                      android:background="@drawable/apptentive_edittext_single_line_background"
                      android:hint="@string/apptentive_message_center_who_card_name_hint"
                      android:textColor="@color/apptentive_text_message_text"
                      android:textSize="16sp"/>
            <EditText android:id="@+id/who_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="20dp"
                      android:singleLine="true"
                      android:background="@drawable/apptentive_edittext_single_line_background"
                      android:hint="@string/apptentive_message_center_who_card_email_hint"
                      android:textColor="@android:color/black"
                      android:textSize="16sp" android:inputType="textEmailAddress"/>


            <LinearLayout android:id="@+id/whocard_buttons"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/apptentive_message_center_outgoing_background"
                          android:gravity="right"
                          android:minHeight="40dp"
                          android:orientation="horizontal"
                          >
                <Button android:id="@+id/btn_skip"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="Skip"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/apptentive_message_center_who_card_skip"
                        android:textColor="?attr/apptentiveTintColor"
                        />

                <Button android:id="@+id/btn_send"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="Send"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="?attr/apptentiveTintColor"
                        android:text="@string/apptentive_message_center_who_card_me"
                        />
            </LinearLayout>
        </LinearLayout>


</FrameLayout>