<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright (c) 2015, Apptentive, Inc. All Rights Reserved.
~ Please refer to the LICENSE file for the terms and conditions
~ under which redistribution and use of this file is permitted.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:apptentive="http://schemas.android.com/apk/res-auto"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center">
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/apptentive_activity_side_padding"
                android:paddingRight="@dimen/apptentive_activity_side_padding"
                android:fadingEdge="none">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:paddingTop="@dimen/apptentive_activity_vertical_padding"
                      android:paddingBottom="@dimen/apptentive_activity_vertical_padding"
                      android:gravity="center"
                      android:orientation="vertical">
            <LinearLayout android:id="@+id/thank_you_dialog"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <LinearLayout android:id="@+id/thank_you_top_area"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              style="@style/ApptentiveInteractionDialogTopArea"
                              android:orientation="vertical">
                    <TextView android:id="@+id/thank_you_title"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              style="@style/ApptentiveDialogTitle"
                              android:text="@string/apptentive_thanks"/>
                    <TextView android:id="@+id/thank_you_body"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              style="@style/ApptentiveDialogBody"
                              android:text="@string/apptentive_thank_you_dialog_body"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/thank_you_bottom_area"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              style="@style/ApptentiveDialogBottomArea"
                              android:orientation="horizontal">
                    <com.apptentive.android.sdk.module.engagement.interaction.view.common.ApptentiveDialogButton
                            android:id="@+id/close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            apptentive:text="@string/apptentive_thank_you_dialog_close"/>
                    <com.apptentive.android.sdk.module.engagement.interaction.view.common.ApptentiveDialogButton
                            android:id="@+id/view_messages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            apptentive:text="@string/apptentive_thank_you_dialog_view_messages"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>