<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013, Apptentive, Inc. All Rights Reserved.
  ~ Please refer to the LICENSE file for the terms and conditions
  ~ under which redistribution and use of this file is permitted.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@drawable/apptentive_dialog_background">
    <TextView android:id="@+id/title"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|left"
              android:layout_marginBottom="8dp"
              android:textColor="@color/apptentive_dialog_title_text"
              android:textStyle="bold"
              android:textSize="@dimen/apptentive_text_large"
              android:text="@string/apptentive_thank_you"/>
    <TextView android:id="@+id/body"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|left"
              android:layout_marginBottom="16dp"
              android:textColor="@color/apptentive_dialog_body_text"
              android:textSize="@dimen/apptentive_text_medium"/>
    <Button android:id="@+id/rate"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/apptentive_dialog_positive_button"
            android:textColor="@drawable/apptentive_dialog_positive_button_text"
            android:textSize="@dimen/apptentive_text_medium"/>
    <Button android:id="@+id/remind"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/apptentive_dialog_negative_button"
            android:textColor="@drawable/apptentive_dialog_negative_button_text"
            android:textSize="@dimen/apptentive_text_medium"
            android:text="@string/apptentive_rating_remind"/>
    <Button android:id="@+id/no"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/apptentive_dialog_negative_button"
            android:textColor="@drawable/apptentive_dialog_negative_button_text"
            android:textSize="@dimen/apptentive_text_medium"
            android:text="@string/apptentive_no_thanks"/>
</LinearLayout>