<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015, Apptentive, Inc. All Rights Reserved.
  ~ Please refer to the LICENSE file for the terms and conditions
  ~ under which redistribution and use of this file is permitted.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:apptentive="http://schemas.android.com/apk/res-auto"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center">
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/apptentive_activity_side_padding"
                android:paddingRight="@dimen/apptentive_activity_side_padding"
                android:fadingEdge="none">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:paddingTop="@dimen/apptentive_activity_vertical_padding"
                      android:paddingBottom="@dimen/apptentive_activity_vertical_padding"
                      android:gravity="center"
                      android:orientation="vertical">
            <FrameLayout android:layout_width="fill_parent"
                         android:layout_height="wrap_content">
                <!-- Feedback Dialog -->
                <LinearLayout android:id="@+id/feedback_dialog"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <LinearLayout android:id="@+id/top_area"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveInteractionDialogTopArea"
                                  android:orientation="vertical">
                        <TextView android:id="@+id/title"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveDialogTitle"
                                  android:text="@string/apptentive_intro_dialog_title_no_love"/>
                        <TextView android:id="@+id/body"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveDialogBody"/>
                        <AutoCompleteTextView android:id="@+id/email"
                                              android:layout_width="fill_parent"
                                              android:layout_height="wrap_content"
                                              style="@style/ApptentiveInteractionDialogAutoCompleteTextViewEmail"
                                              android:hint="@string/apptentive_edittext_hint_email"/>
                        <EditText android:id="@+id/message"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveInteractionEditText"
                                  android:inputType="textMultiLine|textCapSentences"
                                  android:singleLine="false"
                                  android:minLines="2"
                                  android:maxLines="5"
                                  android:imeOptions="actionDone"
                                  android:hint="@string/apptentive_intro_dialog_edittext_hint"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/bottom_area"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveDialogBottomArea"
                                  android:orientation="horizontal">
                        <com.apptentive.android.sdk.module.engagement.interaction.view.common.ApptentiveDialogButton
                                android:id="@+id/decline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                apptentive:text="@string/apptentive_no_thanks"/>
                        <com.apptentive.android.sdk.module.engagement.interaction.view.common.ApptentiveDialogButton
                                android:id="@+id/submit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                apptentive:text="@string/apptentive_send"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- -->
                <!-- Thank You Dialog -->
                <LinearLayout android:id="@+id/thank_you_dialog"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:visibility="gone">
                    <LinearLayout android:id="@+id/thank_you_top_area"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveInteractionDialogTopArea"
                                  android:orientation="vertical">
                        <TextView android:id="@+id/thank_you_title"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveDialogTitle"
                                  android:text="@string/apptentive_thanks"/>
                        <TextView android:id="@+id/thank_you_body"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveDialogBody"
                                  android:text="@string/apptentive_thank_you_dialog_body"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/thank_you_bottom_area"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  style="@style/ApptentiveDialogBottomArea"
                                  android:orientation="horizontal">
                        <com.apptentive.android.sdk.module.engagement.interaction.view.common.ApptentiveDialogButton
                                android:id="@+id/thank_you_close"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                apptentive:text="@string/apptentive_no_thanks"/>
                        <com.apptentive.android.sdk.module.engagement.interaction.view.common.ApptentiveDialogButton
                                android:id="@+id/thank_you_view_messages"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                apptentive:text="@string/apptentive_send"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- -->
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>