<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright (c) 2015, Apptentive, Inc. All Rights Reserved.
~ Please refer to the LICENSE file for the terms and conditions
~ under which redistribution and use of this file is permitted.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical">
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/apptentive_dialog_side_padding"
                android:paddingRight="@dimen/apptentive_dialog_side_padding"
                android:fadingEdge="none">
        <FrameLayout android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/apptentive_dialog_vertical_padding"
                     android:paddingBottom="@dimen/apptentive_dialog_vertical_padding">
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:padding="16dp"
                          android:background="@drawable/apptentive_dialog_background_with_border">
                <TextView android:id="@+id/title"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="16dp"
                          style="@style/ApptentiveDialogTitle"
                          android:text="@string/apptentive_thanks"/>
                <TextView android:id="@+id/body"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="24dp"
                          style="@style/ApptentiveDialogBody"
                          android:text="@string/apptentive_thank_you_dialog_body"/>
                <LinearLayout android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:orientation="horizontal">
                    <Button android:id="@+id/ok"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:minEms="6"
                            style="@style/ApptentiveInteractionPositiveButton"
                            android:text="@string/apptentive_ok"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>