<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright (c) 2014, Apptentive, Inc. All Rights Reserved.
~ Please refer to the LICENSE file for the terms and conditions
~ under which redistribution and use of this file is permitted.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical">
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/apptentive_activity_side_padding"
                android:paddingRight="@dimen/apptentive_activity_side_padding"
                android:fadingEdge="none">
        <FrameLayout android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/apptentive_activity_vertical_padding"
                     android:paddingBottom="@dimen/apptentive_activity_vertical_padding">
            <RelativeLayout android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:background="@drawable/apptentive_dialog_background">
                <LinearLayout android:id="@+id/apptentive_intro_instructions_container"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_alignParentTop="true"
                              android:layout_alignParentLeft="true">
                    <TextView android:id="@+id/title"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              style="@style/ApptentiveInteractionDialogTitle"
                              android:text=""/>
                    <TextView android:id="@+id/body"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              style="@style/ApptentiveInteractionDialogBody"
                              android:text=""/>
                </LinearLayout>
                <AutoCompleteTextView android:id="@+id/email"
                                      android:layout_width="fill_parent"
                                      android:layout_height="wrap_content"
                                      android:layout_alignParentLeft="true"
                                      android:layout_below="@id/apptentive_intro_instructions_container"
                                      style="@style/ApptentiveInteractionAutoCompleteTextView"
                                      android:inputType="textEmailAddress"
                                      android:completionThreshold="1"
                                      android:singleLine="true"
                                      android:imeOptions="actionNext"
                                      android:hint="@string/apptentive_edittext_hint_email"/>
                <EditText android:id="@+id/message"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_alignParentLeft="true"
                          android:layout_below="@id/email"
                          android:layout_marginBottom="16dp"
                          style="@style/ApptentiveInteractionEditText"
                          android:capitalize="sentences"
                          android:singleLine="false"
                          android:minLines="2"
                          android:maxLines="5"
                          android:imeOptions="actionDone"
                          android:hint="@string/apptentive_intro_dialog_edittext_hint"/>
                <LinearLayout android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:layout_below="@id/message"
                              android:layout_alignParentRight="true">
                    <Button android:id="@+id/no_thanks"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:layout_marginRight="4dp"
                            style="@style/ApptentiveInteractionNegativeButton"
                            android:text="@string/apptentive_no_thanks"/>
                    <Button android:id="@+id/send"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            style="@style/ApptentiveInteractionPositiveButton"
                            android:text="@string/apptentive_send"/>
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>